--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -159,6 +159,8 @@
     --INTERNAL-MENU-WIDTH-L: var(--MENU-WIDTH-L, 18.75rem);
     --INTERNAL-MAIN-WIDTH-MAX: var(--MAIN-WIDTH-MAX, 81.25rem);
 
+    --INTERNAL-BOX-FOREWORD-color: var(--BOX-FOREWORD-color, rgb(0, 121, 87));
+    --INTERNAL-BOX-FOREWORD-TEXT-color: var(--BOX-FOREWORD-TEXT-color, var(--INTERNAL-BOX-TEXT-color));
 }
 
 *,
@@ -3529,6 +3531,11 @@ body.notfound #shrug svg {
   --VARIABLE-BOX-CAPTION-color: var(--INTERNAL-MAIN-TITLES-TEXT-color);
   --VARIABLE-BOX-BG-color: transparent;
   --VARIABLE-BOX-TEXT-color: var(--INTERNAL-MAIN-TEXT-color);
+}
+
+.cstyle.foreword {
+    --VARIABLE-BOX-color: var(--INTERNAL-BOX-FOREWORD-color);
+    --VARIABLE-BOX-TEXT-color: var(--INTERNAL-BOX-FOREWORD-TEXT-color);
 }
 
 /* Roboto Flex
